adding db udpate and name change

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
 <body>
   <h1>Skip The Cooking</h1>
   <h2>Pies & Fries</h2>
-  <h3>By Llyod & Terrence</h3>
+  <h3>By Lloyd & Terrence</h3>
 </body>
 
 </html>
