--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,8 +15,10 @@
   <script type="text/javascript" src="/scripts/app.js"></script>
 </head>
 
+<!-- NAV BAR----------------->
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">SkipTheCooking</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -51,9 +53,9 @@
     </div>
   </nav>
 
+<!--  START BODY------------------->
 
 <body>
-  <h1>Skip The Cooking</h1>
   <h2>Pies & Fries</h2>
   <h3>By Lloyd & Terrence</h3>
   <button type="button" class="btn btn-primary">Hello</button>
