Clean up the main page

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,6 +14,11 @@ $color-yellow: #f4eeb0;
   background-color: $color-green;
 }
 
+H1 {
+  text-align-last: center;
+}
+
+
 .main-div {
   background-color: #F4EEB0;
   width: 150rem;
