--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,15 +75,15 @@
     <!-- LEFT -->
 
     <div class="container-fluid left-sidebar">
-      <h1><i class="fad fa-pie"></i>'s & <i class="fad fa-french-fries"></i>'s</h1>
-      <h2>Pies & Fries</h2>
-      <h3>By Lloyd & Terrence</h3>
+
+      <!-- <h5>Pies & Fries</h5>
+      <h6>By Lloyd & Terrence</h5> -->
     </div>
 
     <!-- MIDDLE -->
 
     <div class="container-fluid main-div">
-
+      <h1><i class="fad fa-pie"></i>S <i class="fad fa-plus"></i> <i class="fad fa-french-fries"></i>S</h1>
       <section class="product-container">
         <!-- New products will populate here -->
 
@@ -122,8 +122,8 @@
     <!-- RIGHT -->
 
     <div class="container-fluid right-sidebar">
-      Umm, I'm the right div
-      <button type="button" class="btn btn-primary">Hello</button>
+      <!-- Umm, I'm the right div
+      <button type="button" class="btn btn-primary">Hello</button> -->
     </div>
 
   </main>
