added js ajax file, jquery, and updated index to have shopping basket ids

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,7 @@
 <!-- Scripts -->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
+  <script type="text/javascript" src="/routes/ajax.js"></script>
 
   <!-- FONT AWESOME -->
   <script src="https://kit.fontawesome.com/5951c80bc7.js" crossorigin="anonymous"></script>
@@ -87,7 +88,7 @@
             <!-- FOOTER -->
             <div>
               <i class="fad fa-heart"></i>
-              <i class="fad fa-shopping-cart"></i>
+              <iinput class="fad fa-shopping-cart" id="shopping-add" type="submit"></i>
             </div>
           </footer>
         </div>
