minor updates to ajax files and bug ficx to index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,6 @@
 <!-- Scripts -->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
-  <script type="text/javascript" src="/routes/ajax.js"></script>
 
   <!-- FONT AWESOME -->
   <script src="https://kit.fontawesome.com/5951c80bc7.js" crossorigin="anonymous"></script>
@@ -40,7 +39,7 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
     </ul>
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</butto
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
   </div>
 </nav>
 
@@ -88,7 +87,8 @@
             <!-- FOOTER -->
             <div>
               <i class="fad fa-heart"></i>
-              <iinput class="fad fa-shopping-cart" id="shopping-add" type="submit"></i>
+              <i class="fad fa-shopping-cart" id="shopping-add" type="submit">
+            </i>
             </div>
           </footer>
         </div>
