Display all products on the main page
This will render all the food items on the main page as indervidule items.

--- a/styles/all-products.scss
+++ b/styles/all-products.scss
@@ -11,7 +11,7 @@ $color-blue: #446279;
 $color-green: #5DA68F;
 $color-yellow: #f4eeb0;
 
-.product-container {
+.product-card {
   font-family: $primary-font;
   margin: $margin;
   padding: $padding;
