--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,8 +20,10 @@
   <link rel="stylesheet" href="/styles/all-products.css" type="text/css" />
   <link rel="stylesheet" href="/styles/shopping-cart.css" type="text/css" />
 
-<!-- Scripts -->
-  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+  <!-- Scripts -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+
   <script type="text/javascript" src="/scripts/app.js"></script>
   <script type="text/javascript" src="/routes/ajax.js"></script>
 
@@ -33,128 +35,96 @@
 
 <!--  NAVBAR  -->
 <nav id="navbar" class="navbar navbar-expand-lg">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+    aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <header class="navbar-brand" href="#">SkipTheCooking </header>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
     </ul>
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</butto
-  </div>
-</nav>
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</butto </div> </nav> <!-- START
+        BODY------------------->
 
-<!--  START BODY------------------->
+      <body>
+        <main class='container'>
 
-<body>
-  <main class='container'>
+          <!-- LEFT -->
 
-    <!-- LEFT -->
+          <div class="container-fluid left-sidebar">
 
-    <div class="container-fluid left-sidebar">
-
-      <!-- <h5>Pies & Fries</h5>
+            <!-- <h5>Pies & Fries</h5>
       <h6>By Lloyd & Terrence</h5> -->
-    </div>
+          </div>
 
-    <!-- MIDDLE -->
+          <!-- MIDDLE -->
 
-    <div class="container-fluid main-div">
-      <h1><i class="fad fa-pie"></i>S <i class="fad fa-plus"></i> <i class="fad fa-french-fries"></i>S</h1>
-      <section class="product-container">
-        <!-- New products will populate here -->
+          <div class="container-fluid main-div">
+            <h1><i class="fad fa-pie"></i>S <i class="fad fa-plus"></i> <i class="fad fa-french-fries"></i>S</h1>
+
+            <section class="product-container">
+              <!-- New products will populate here -->
+            </section>
+
+          </div>
+
+          <!-- RIGHT -->
+
+          <div class="container-fluid right-sidebar">
+            <i class="fad fa-shopping-cart"></i> Shopping Cart
+            <div class="shopping-cart">
+
+              <article class="order">
+                <div class="item">
+                  <h6>Meat Pie</h6>
+                  <h6><i class="fad fa-dollar-sign"></i>7.50</h6>
+                </div>
+                <div class="item">
+                  <h6>French Fries</h6>
+                  <h6><i class="fad fa-dollar-sign"></i>4.00</h6>
+                </div>
+                <div class="item">
+                  <h6>Gravy</h6>
+                  <h6><i class="fad fa-dollar-sign"></i>1.25</h6>
+                </div>
+              </article>
+
+              <div class="total">
+                <p> TOTAL <i class="fad fa-dollar-sign"></i>12.75</p>
+              </div>
 
 
-        <div class="image">
-          <img src="https://img.taste.com.au/LFTcg4ad/w643-h428-cfill-q90/taste/2016/11/aussie-meat-pies-16289-1.jpeg"
-            width="100%">
-        </div>
+              <button type="button" class="btn btn-secondary btn-block"><i class="fad fa-cash-register"></i>
+                PAY</button>
 
-        <article>
-          <header>
-            <div class="title">
-              Aussie Meat Pie
+              <div class="form-check notify">
+                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <i class="fad fa-bell"></i>
+                <label class="form-check-label" for="defaultCheck1">
+                  NOTIFY ME
+                </label>
+              </div>
+
             </div>
-            <div class="price">
-              $7.50
-            </div>
-          </header>
-          <div class="discription">
-            <p>An Aussie icon, this classic pie is made with a shortcrust base and a rich beef mince gravy.</p>
-          </div>
-        </article>
-        <div>
-          <footer>
-            <!-- FOOTER -->
-            <div>
-              <i class="fad fa-heart"></i>
-              <iinput class="fad fa-shopping-cart" id="shopping-add" type="submit"></i>
-            </div>
-          </footer>
-        </div>
-      </section>
-
-    </div>
-
-    <!-- RIGHT -->
-
-    <div class="container-fluid right-sidebar">
-      <i class="fad fa-shopping-cart"></i> Shopping Cart
-      <div class="shopping-cart">
-
-        <article class="order">
-          <div class="item">
-            <h6>Meat Pie</h6>
-            <h6><i class="fad fa-dollar-sign"></i>7.50</h6>
-          </div>
-          <div class="item">
-            <h6>French Fries</h6>
-            <h6><i class="fad fa-dollar-sign"></i>4.00</h6>
-          </div>
-          <div class="item">
-            <h6>Gravy</h6>
-            <h6><i class="fad fa-dollar-sign"></i>1.25</h6>
-          </div>
-        </article>
-
-        <div class="total">
-          <p> TOTAL <i class="fad fa-dollar-sign"></i>12.75</p>
-        </div>
-
-
-        <button type="button" class="btn btn-secondary btn-block"><i class="fad fa-cash-register"></i>
-          PAY</button>
-
-        <div class="form-check notify">
-          <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-          <i class="fad fa-bell"></i>
-          <label class="form-check-label" for="defaultCheck1">
-            NOTIFY ME
-          </label>
-        </div>
-
-      </div>
-      <!-- Umm, I'm the right div
+            <!-- Umm, I'm the right div
       <button type="button" class="btn btn-primary">Hello</button> -->
 
-    </div>
+          </div>
 
-  </main>
+        </main>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+          integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+          crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+          integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+          crossorigin="anonymous"></script>
 
 
 
 
-</body>
+      </body>
 
 
 
