smaller bug fix

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,24 +54,13 @@
           <!-- LEFT -->
 
           <div class="container-fluid left-sidebar">
-
-            <!-- <h5>Pies & Fries</h5>
-      <h6>By Lloyd & Terrence</h5> -->
-          </div>
-        </article>
-        <div>
-          <footer>
-            <!-- FOOTER -->
-            <div>
-              <i class="fad fa-heart"></i>
-              <i class="fad fa-shopping-cart" id="shopping-add" type="submit">
-            </i>
-            </div>
-          </footer>
         </div>
-      </section>
+
 
           <!-- MIDDLE -->
+
+          <div class="container-fluid main-div">
+            <h1><i class="fad fa-pie"></i>S <i class="fad fa-plus"></i> <i class="fad fa-french-fries"></i>S</h1>
 
             <section class="product-container">
               <!-- New products will populate here -->
