Make icon hover state smoother

--- a/styles/all-products.scss
+++ b/styles/all-products.scss
@@ -44,13 +44,10 @@ footer {
 }
 
 
-
 .fa-heart:hover {
-  font-size: 2rem;
+  transform: scale(1.5);
 }
 .fa-shopping-cart:hover {
-  font-size: 2rem;
+  transform: scale(1.5);
 }
-
-
 
