adding helper for cart total

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,7 +71,6 @@
           <div class="container-fluid right-sidebar">
             <i class="fad fa-shopping-cart"></i> Shopping Cart
             <div class="shopping-cart">
-
               <article class="order">
                 <div class="item">
                   <h6>Meat Pie</h6>
@@ -88,7 +87,8 @@
               </article>
 
               <div class="total">
-                <p> TOTAL <i class="fad fa-dollar-sign"></i>12.75</p>
+                <p> TOTAL
+                  <em id="cart-total"></em></p>
               </div>
 
 
@@ -112,6 +112,8 @@
         </main>
 <!-- Scripts -->
   <script type="text/javascript" src="/scripts/app.js"></script>
+  <script type="text/javascript" src="/scripts/shopping-cart.js"></script>
+
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
           integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
