--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,9 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
     </ul>
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+    <form action="/login/1" method="get">
+      <button id="login-submit" type="submit">Login</button>
+    </form>
   </div>
 </nav>
 
@@ -87,7 +89,7 @@
               </article>
 
               <div class="total">
-                <p> TOTAL
+                <p> TOTAL $
                   <em id="cart-total"></em></p>
               </div>
 
