--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
 <nav id="navbar" class="navbar navbar-expand-lg">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
     aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <i class="fad fa-hamburger" class="navbar-toggler-icon"></i>
   </button>
   <header class="navbar-brand" href="#">SkipTheCooking </header>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
