correct the grammer for pies & fries

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
     <!-- MIDDLE -->
 
     <div class="container-fluid main-div">
-      <h1><i class="fad fa-pie"></i>S <i class="fad fa-plus"></i> <i class="fad fa-french-fries"></i>S</h1>
+      <h1><i class="fad fa-pie"></i>s & <i class="fad fa-french-fries"></i>s</h1>
 
       <section class="product-container">
 
