--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,7 +70,7 @@
 
     <!-- RIGHT -->
 
-    <div class="container-fluid right-sidebar">
+    <!-- <div class="container-fluid right-sidebar">
       <i class="fad fa-shopping-cart"></i> Shopping Cart
       <div class="shopping-cart">
         <article class="order">
@@ -91,50 +91,50 @@
         <div class="total">
           <p> TOTAL
             <em id="cart-total"></em></p>
+        </div> -->
+
+    <!-- RIGHT -->
+
+    <div class="container-fluid right-sidebar">
+      <i class="fad fa-shopping-cart"></i> Shopping Cart
+      <div class="shopping-cart">
+        <article class="order">
+          <div class="item">
+            <h6>Meat Pie</h6>
+            <h6><i class="fad fa-dollar-sign"></i>7.50</h6>
+          </div>
+          <div class="item">
+            <h6>French Fries</h6>
+            <h6><i class="fad fa-dollar-sign"></i>4.00</h6>
+          </div>
+          <div class="item">
+            <h6>Gravy</h6>
+            <h6><i class="fad fa-dollar-sign"></i>1.25</h6>
+          </div>
+        </article>
+
+        <div class="total">
+          <p> TOTAL $
+            <em id="cart-total"></em></p>
         </div>
 
-        <!-- RIGHT -->
 
-        <div class="container-fluid right-sidebar">
-          <i class="fad fa-shopping-cart"></i> Shopping Cart
-          <div class="shopping-cart">
-            <article class="order">
-              <div class="item">
-                <h6>Meat Pie</h6>
-                <h6><i class="fad fa-dollar-sign"></i>7.50</h6>
-              </div>
-              <div class="item">
-                <h6>French Fries</h6>
-                <h6><i class="fad fa-dollar-sign"></i>4.00</h6>
-              </div>
-              <div class="item">
-                <h6>Gravy</h6>
-                <h6><i class="fad fa-dollar-sign"></i>1.25</h6>
-              </div>
-            </article>
+        <button type="button" class="btn btn-secondary btn-block"><i class="fad fa-cash-register"></i>
+          PAY</button>
 
-            <div class="total">
-              <p> TOTAL $
-                <em id="cart-total"></em></p>
-            </div>
+        <div class="form-check notify">
+          <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+          <i class="fad fa-bell"></i>
+          <label class="form-check-label" for="defaultCheck1">
+            NOTIFY ME
+          </label>
+        </div>
 
-
-            <button type="button" class="btn btn-secondary btn-block"><i class="fad fa-cash-register"></i>
-              PAY</button>
-
-            <div class="form-check notify">
-              <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-              <i class="fad fa-bell"></i>
-              <label class="form-check-label" for="defaultCheck1">
-                NOTIFY ME
-              </label>
-            </div>
-
-          </div>
-          <!-- Umm, I'm the right div
+      </div>
+      <!-- Umm, I'm the right div
       <button type="button" class="btn btn-primary">Hello</button> -->
 
-        </div>
+    </div>
 
   </main>
   <!-- Scripts -->
