fix the sms functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -119,7 +119,7 @@
         </div>
 
 
-        <button type="button" class="btn btn-secondary btn-block"><i class="fad fa-cash-register"></i>
+        <button id='pay' type="button" class="btn btn-secondary btn-block"><i class="fad fa-cash-register"></i>
           PAY</button>
 
         <div class="form-check notify">
