--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,19 +30,38 @@
 </head>
 
 <!--  NAVBAR  -->
-<nav id="navbar" class="navbar navbar-expand-lg">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
-    aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-    <i class="fad fa-hamburger" class="navbar-toggler-icon"></i>
-  </button>
+<nav id="navbar" class="navbar">
+
+  <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button> -->
+
   <header class="navbar-brand" href="#">SkipTheCooking </header>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <i class="fad fa-hamburger "></i>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="navbar-nav">
+      <form action="/login/1" method="get">
+        <button id="login-submit" type="submit">Login</button>
+
+    </div>
+  </div>
+
+
+  <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+    aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation"> -->
+  <!-- <i class="fad fa-hamburger" class="navbar-toggler-icon"></i> -->
+
+  <!-- <header class="navbar-brand" href="#">SkipTheCooking </header>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-    </ul>
-    <form action="/login/1" method="get">
+    </ul> -->
+  <!-- <form action="/login/1" method="get">
       <button id="login-submit" type="submit">Login</button>
-    </form>
-  </div>
+    </form> -->
+  <!-- </div> -->
 </nav>
 
 <!--  START BODY------------------->
