Displays cart when button is clicked

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,37 +31,21 @@
 
 <!--  NAVBAR  -->
 <nav id="navbar" class="navbar">
-
-  <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button> -->
-
   <header class="navbar-brand" href="#">SkipTheCooking </header>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <i class="fad fa-hamburger "></i>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="
+    #navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+    aria-label="Toggle navigation">
+    <i class="fad fa-hamburger"></i>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <div class="navbar-nav">
       <form action="/login/1" method="get">
         <button id="login-submit" type="submit">Login</button>
-
+      </form>
+      <button type="submit" class="btn button btn-secondary"> <i class="fad fa-shopping-cart"></i> </button>
     </div>
   </div>
-
-
-  <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
-    aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation"> -->
-  <!-- <i class="fad fa-hamburger" class="navbar-toggler-icon"></i> -->
-
-  <!-- <header class="navbar-brand" href="#">SkipTheCooking </header>
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-    </ul> -->
-  <!-- <form action="/login/1" method="get">
-      <button id="login-submit" type="submit">Login</button>
-    </form> -->
-  <!-- </div> -->
+  </div>
 </nav>
 
 <!--  START BODY------------------->
@@ -79,42 +63,15 @@
 
     <div class="container-fluid main-div">
       <h1><i class="fad fa-pie"></i>s & <i class="fad fa-french-fries"></i>s</h1>
-
       <section class="product-container">
-
         <!-- New products will populate here -->
       </section>
-
     </div>
 
-    <!-- RIGHT -->
-
-    <!-- <div class="container-fluid right-sidebar">
-      <i class="fad fa-shopping-cart"></i> Shopping Cart
-      <div class="shopping-cart">
-        <article class="order">
-          <div class="item">
-            <h6>Meat Pie</h6>
-            <h6><i class="fad fa-dollar-sign"></i>7.50</h6>
-          </div>
-          <div class="item">
-            <h6>French Fries</h6>
-            <h6><i class="fad fa-dollar-sign"></i>4.00</h6>
-          </div>
-          <div class="item">
-            <h6>Gravy</h6>
-            <h6><i class="fad fa-dollar-sign"></i>1.25</h6>
-          </div>
-        </article>
-
-        <div class="total">
-          <p> TOTAL
-            <em id="cart-total"></em></p>
-        </div> -->
 
     <!-- RIGHT -->
 
-    <div class="container-fluid right-sidebar">
+    <div class="container-fluid right-sidebar rb" id="right">
       <i class="fad fa-shopping-cart"></i> Shopping Cart
       <div class="shopping-cart">
         <article class="order">
