Add shopping cart icon to navbar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,17 +32,19 @@
 <!--  NAVBAR  -->
 <nav id="navbar" class="navbar">
   <header class="navbar-brand" href="#">SkipTheCooking </header>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="
+  <div>
+    <i class="button fad fa-shopping-cart"></i>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="
     #navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-    aria-label="Toggle navigation">
-    <i class="fad fa-hamburger"></i>
-  </button>
+      aria-label="Toggle navigation">
+      <i class="fad fa-hamburger"></i>
+    </button>
+  </div>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <div class="navbar-nav">
       <form action="/login/1" method="get">
         <button id="login-submit" type="submit">Login</button>
       </form>
-      <button type="submit" class="btn button btn-secondary"> <i class="fad fa-shopping-cart"></i> </button>
     </div>
   </div>
   </div>
@@ -55,7 +57,7 @@
 
     <!-- LEFT -->
 
-    <div class="container-fluid left-sidebar">
+    <div class="container-fluid lb left-sidebar">
     </div>
 
 
