--- a/styles/main.scss
+++ b/styles/main.scss
@@ -73,9 +73,10 @@ H1 {
 .container {
   display: inline-flex;
   max-width: -webkit-fill-available;
-  margin: none;
-  // @include media-breakpoint-up(md) {
-  //  }
+  padding-right: 0px;
+  padding-left: 0px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 
