--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,8 @@
 </head>
 
 <!--  NAVBAR  -->
-<nav id="navbar" class="navbar">
+<nav id="navbar" class="navbar navbar-default navbar-fixed-top">
+
   <header class="navbar-brand" href="#">SkipTheCooking </header>
   <div>
     <i class="button fad fa-shopping-cart"></i>
@@ -47,7 +48,7 @@
       </form>
     </div>
   </div>
-  </div>
+
 </nav>
 
 <!--  START BODY------------------->
@@ -74,8 +75,9 @@
     <!-- RIGHT -->
 
     <div class="container-fluid right-sidebar rb" id="right">
-      <i class="fad fa-shopping-cart"></i> Shopping Cart
+
       <div class="shopping-cart">
+        <i class="fad fa-shopping-cart"></i> Shopping Cart
         <article class="order">
           <div class="item">
             <h6>Meat Pie</h6>
