Display total in navbar when applicable

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,12 @@
 
   <header class="navbar-brand" href="#">SkipTheCooking </header>
   <div>
+    <div class="total navTotal">
+      TOTAL $
+      <em id="cart-total"></em>
+    </div>
     <i class="button fad fa-shopping-cart"></i>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="
     #navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
       aria-label="Toggle navigation">
