adding updated shopping cart handler: updated eempty div function

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,32 +79,14 @@
     </div>
 
 
-    <!-- RIGHT -->
-
-    <div class="container-fluid right-sidebar rb" id="right">
-
-      <div class="shopping-cart">
-        <i class="fad fa-shopping-cart"></i> Shopping Cart
-        <article class="order">
-          <div class="item">
-            <h6>Meat Pie</h6>
-            <h6><i class="fad fa-dollar-sign"></i>7.50</h6>
-          </div>
-          <div class="item">
-            <h6>French Fries</h6>
-            <h6><i class="fad fa-dollar-sign"></i>4.00</h6>
-          </div>
-          <div class="item">
-            <h6>Gravy</h6>
-            <h6><i class="fad fa-dollar-sign"></i>1.25</h6>
-          </div>
-
           <!-- RIGHT -->
           <div class="container-fluid right-sidebar">
 
             <i class="fad fa-shopping-cart"></i> Shopping Cart
             <div class="shopping-cart">
-
+              <div class="shopping-cart-container">
+<!-- Stuff will go in here -->
+              </div>
               <div class="total">
                 <p> TOTAL $
                   <em id="cart-total"></em></p>
