--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,10 +66,10 @@
     <div class="container-fluid lb left-sidebar">
     </div>
 
-          <!-- LEFT -->
+    <!-- LEFT -->
 
-          <div class="container-fluid left-sidebar">
-        </div>
+    <div class="container-fluid left-sidebar">
+    </div>
 
     <div class="container-fluid main-div">
       <h1><i class="fad fa-pie"></i>s & <i class="fad fa-french-fries"></i>s</h1>
@@ -79,50 +79,50 @@
     </div>
 
 
-          <!-- RIGHT -->
-          <div class="container-fluid right-sidebar">
+    <!-- RIGHT -->
+    <div class="rb container-fluid right-sidebar">
 
-            <i class="fad fa-shopping-cart"></i> Shopping Cart
-            <div class="shopping-cart">
-              <div class="shopping-cart-container">
-<!-- Stuff will go in here -->
-              </div>
-              <div class="total">
-                <p> TOTAL $
-                  <em id="cart-total"></em></p>
-              </div>
-<!-- END Dyanamic Cart -->
-              <button type="button" class="btn btn-secondary btn-block"><i class="fad fa-cash-register"></i>
-                PAY</button>
+      <i class="fad fa-shopping-cart"></i> Shopping Cart
+      <div class="shopping-cart">
+        <div class="shopping-cart-container">
+          <!-- Stuff will go in here -->
+        </div>
+        <div class="total">
+          <p> TOTAL $
+            <em id="cart-total"></em></p>
+        </div>
+        <!-- END Dyanamic Cart -->
+        <button id="pay" type="button" class="btn btn-secondary btn-block"><i class="fad fa-cash-register"></i>
+          PAY</button>
 
-              <div class="form-check notify">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                <i class="fad fa-bell"></i>
-                <label class="form-check-label" for="defaultCheck1">
-                  NOTIFY ME
-                </label>
-              </div>
+        <div class="form-check notify">
+          <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+          <i class="fad fa-bell"></i>
+          <label class="form-check-label" for="defaultCheck1">
+            NOTIFY ME
+          </label>
+        </div>
 
-            </div>
+      </div>
 
-          </div>
+    </div>
 
-        </main>
-<!-- Scripts -->
+  </main>
+  <!-- Scripts -->
   <script type="text/javascript" src="/scripts/app.js"></script>
   <script type="text/javascript" src="/scripts/shopping-cart.js"></script>
   <script type="text/javascript" src="/routes/send_sms.js "></script>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-          integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-          crossorigin="anonymous"></script>
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-          integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-          crossorigin="anonymous"></script>
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 
 
-      </body>
+</body>
 
 
 </html>
