--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
   <div>
     <div class="total navTotal">
       TOTAL $
-      <em id="cart-total"></em>
+      <em class="cart-total"></em>
     </div>
     <i class="button fad fa-shopping-cart"></i>
 
@@ -111,7 +111,7 @@
   <!-- Scripts -->
   <script type="text/javascript" src="/scripts/app.js"></script>
   <script type="text/javascript" src="/scripts/shopping-cart.js"></script>
-  <script type="text/javascript" src="/routes/send_sms.js "></script>
+
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
