shopping cart helpers now calculating properly

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
   <div>
     <div class="total navTotal">
       TOTAL $
-      <em id="cart-total"></em>
+      <em class="cart-total"></em>
     </div>
     <i class="button fad fa-shopping-cart"></i>
 
@@ -89,7 +89,7 @@
               </div>
               <div class="total">
                 <p> TOTAL $
-                  <em id="cart-total"></em></p>
+                  <div class="cart-total"></div></p>
               </div>
 <!-- END Dyanamic Cart -->
               <button type="button" class="btn btn-secondary btn-block"><i class="fad fa-cash-register"></i>
