Display the shopping cart correctly

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,10 +34,7 @@
 
   <header class="navbar-brand" href="#">SkipTheCooking </header>
   <div>
-    <div class="total navTotal">
-      TOTAL $
-      <em class="cart-total"></em>
-    </div>
+
     <i class="button fad fa-shopping-cart"></i>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="
@@ -45,6 +42,10 @@
       aria-label="Toggle navigation">
       <i class="fad fa-hamburger"></i>
     </button>
+    <div class="total navTotal">
+      TOTAL $
+      <em class="cart-total"></em>
+    </div>
   </div>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <div class="navbar-nav">
@@ -80,13 +81,15 @@
 
 
     <!-- RIGHT -->
-    <div class="container-fluid right-sidebar">
+    <div class="container-fluid right-sidebar rb">
 
-      <i class="fad fa-shopping-cart"></i> Shopping Cart
+
       <div class="shopping-cart">
+        <i class="fad fa-shopping-cart"></i> Shopping Cart
         <div class="shopping-cart-container">
           <!-- Stuff will go in here -->
         </div>
+        <span class="divider"></span>
         <div class="total">
           <p> TOTAL $
             <div class="cart-total"></div>
