--- a/styles/all-products.scss
+++ b/styles/all-products.scss
@@ -1,4 +1,3 @@
-
 $padding: 2rem;
 $margin: 2rem;
 $primary-font: 'Lato', sans-serif;
@@ -43,11 +42,15 @@ footer {
   font-family: $secondary-font
 }
 
-
+.order{
+  font-family: $primary-font;
+  width: 100%;
+}
 .fa-heart:hover {
   transform: scale(1.5);
 }
 .fa-shopping-cart:hover {
+  cursor: pointer;
   transform: scale(1.5);
 }
 
