--- a/styles/shopping-cart.scss
+++ b/styles/shopping-cart.scss
@@ -1,4 +1,3 @@
-
 $padding: 2rem;
 $margin: 2rem;
 $primary-font: 'Lato', sans-serif;
@@ -33,7 +32,13 @@ $color-yellow: #f4eeb0;
   align-items: center;
 }
 
+.divider{
+  border-top: double;
+}
+
 .total {
+  font-family: $primary-font;
+  border-top: double;
   display: flex;
   justify-content: flex-end;
 }
