--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,7 +85,12 @@
 
 
       <div class="shopping-cart">
-        <i class="fad fa-shopping-cart"></i> Shopping Cart
+        <div class="shopping-cart-header">
+        <!-- <i class="fad fa-shopping-cart"> </i>  -->
+        Shopping Cart<a href="/clear-cart">Clear Cart</a>
+
+      </div>
+      <br>
         <div class="shopping-cart-container">
           <!-- Stuff will go in here -->
         </div>
