--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,11 +86,11 @@
 
       <div class="shopping-cart">
         <div class="shopping-cart-header">
-        <!-- <i class="fad fa-shopping-cart"> </i>  -->
-        Shopping Cart<a href="/clear-cart">Clear Cart</a>
+          <!-- <i class="fad fa-shopping-cart"> </i>  -->
+          Shopping Cart<a href="/clear-cart">Clear Cart</a>
 
-      </div>
-      <br>
+        </div>
+        <br>
         <div class="shopping-cart-container">
           <!-- Stuff will go in here -->
         </div>
@@ -101,9 +101,12 @@
           </p>
         </div>
         <!-- END Dyanamic Cart -->
-        <button type="button" class="btn btn-secondary btn-block"><i class="fad fa-cash-register"></i>
+        <button type="button" id="pay" class="btn btn-secondary btn-block"><i class="fad fa-cash-register"></i>
           PAY</button>
-
+        <form action='/checkout' method="post">
+          <button type="submit" class="checkout btn btn-secondary btn-block"><i class="fad fa-cash-register"></i>
+            CHECKOUT</button>
+        </form>
         <div class="form-check notify">
           <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
           <i class="fad fa-bell"></i>
