Display order total correctly

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -107,7 +107,7 @@
         <span class="divider"></span>
         <div class="total">
           <p> TOTAL $
-            <div class="cart-total"></div>
+            <div class="cart-total"><%= calcTotal %></div>
           </p>
         </div>
         <!-- END Dyanamic Cart -->
