Fix adding item to cart issue

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -111,10 +111,9 @@
           </p>
         </div>
         <!-- END Dyanamic Cart -->
-        <button type="button" id="pay" class="btn btn-secondary btn-block"><i class="fad fa-cash-register"></i>
-          PAY</button>
         <form action='/checkout' method="post">
-          <button type="submit" class="checkout btn btn-secondary btn-block"><i class="fad fa-cash-register"></i>
+          <button type="submit" id="pay" class="checkout btn btn-secondary btn-block"><i
+              class="fad fa-cash-register"></i>
             CHECKOUT</button>
         </form>
         <div class="form-check notify">
