--- a/styles/shopping-cart.scss
+++ b/styles/shopping-cart.scss
@@ -57,6 +57,6 @@ $color-yellow: #f4eeb0;
 }
 
 .notify {
-  // display: flex;
-  // justify-content: flex-end;
+  //display: flex;
+  //justify-content: space-between;
 }
