Hide phone input onload and display when 'Notify Me' is clicked

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -79,6 +79,13 @@ H1 {
   margin-left: auto;
 }
 
+#phoneNumber {
+  display: none;
+  width: 100%;
+  margin-top: 1rem;
+  border: 1rem;
+}
+
 .order {
   width: 30%;
 }
