--- a/views/index.ejs
+++ b/views/index.ejs
@@ -118,7 +118,7 @@
 
           <div class="form-check notify">
 
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <input class="form-check-input" type="checkbox" value="" id="notifyMe">
             <i class="fad fa-bell"></i>
             <label class="form-check-label" for="defaultCheck1">
               NOTIFY ME
