--- a/styles/shopping-cart.scss
+++ b/styles/shopping-cart.scss
@@ -18,11 +18,12 @@ $color-yellow: #f4eeb0;
   margin-bottom: 1rem;
 }
 
-.order {
-  // display: flex;
-  // flex-direction: row;
-  // justify-content: space-between;
-  align-items: center;
+
+#phoneNumber {
+  display: none;
+  width: 100%;
+  margin-top: 1rem;
+  border: 1rem;
 }
 
 .item {
@@ -56,7 +57,6 @@ $color-yellow: #f4eeb0;
   padding-block-end: 1em;
 }
 
-.notify {
-  //display: flex;
-  //justify-content: space-between;
+#notifyMe {
+  cursor: pointer;
 }
